<resources>
    <string name="app_name">One Vote</string>
    <string name="Username">Username</string>
    <string name="password">Password</string>
    <string name="signup">New registration?    ClickHere</string>
    <string name="email">Email Address</string>
    <string name="phno">Phone Number</string>
    <string name="aadhno">Aadhar Number</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="instruction">Enter the email associated with your account
        and we will send an email with instructions
        to reset your password.</string>
    <string name="select">Election Type</string>
    <string name="states">States</string>
    <string name="district">District</string>
    <string-array name="array_election_type">
        <item>Select Election Type</item>
        <item>Parliamentary General Election</item><item>State Assembly Election</item><item>By Election</item>
        <item>Rajya Sabha Election</item><item>Other</item>
    </string-array>
    <string-array name="array_indian_states">
        <item>Select Your State</item>
        <item>Andaman and Nicobar Islands</item><item>Andhra Pradesh</item><item>Arunachal Pradesh</item><item>Assam</item>
        <item>Bihar</item><item>Chandigarh</item><item>Chhattisgarh</item><item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item><item>Delhi</item><item>Goa</item><item>Gujarat</item><item>Haryana</item>
        <item>Himachal Pradesh</item><item>Jammu and Kashmir</item><item>Jharkhand</item><item>Karnataka</item>
        <item>Kerala</item><item>Ladakh</item><item>Lakshadweep</item><item>Madhya Pradesh</item><item>Maharashtra</item>
        <item>Manipur</item><item>Meghalaya</item><item>Mizoram</item><item>Nagaland</item><item>Orissa</item>
        <item>Puducherry</item><item>Punjab</item><item>Rajasthan</item><item>Sikkim</item><item>Tamil Nadu</item>
        <item>Telangana</item><item>Tripura</item><item>Uttarakhand</item><item>Uttar Pradesh</item><item>West Bengal</item>
    </string-array>
    <string-array name="array_default_districts">
        <item>Select Your District</item>
    </string-array>
    <string-array name="array_andhra_pradesh_districts">
        <item>Select Your District</item>
        <item>Anantapur</item><item>Chittoor</item><item>East Godavari</item><item>Guntur</item><item>Kadapa</item><item>Krishna</item>
        <item>Kurnool</item><item>Nellore</item><item>Prakasam</item><item>Srikakulam</item><item>Visakhapatnam</item><item>Vizianagaram</item><item>West Godavari</item>
    </string-array>
    <string-array name="array_arunachal_pradesh_districts">
        <item>Select Your District</item>
        <item>Anjaw</item><item>Siang</item><item>Changlang</item><item>Dibang Valley</item><item>East Kameng</item><item>East Siang</item>
        <item>Kamle</item><item>Kra Daadi</item><item>Kurung Kumey</item><item>Lepa Rada</item><item>Lohit</item><item>Longding</item>
        <item>Lower Dibang Valley</item><item>Lower Siang</item><item>Lower Subansiri</item><item>Namsai</item><item>Pakke Kessang</item><item>Papum Pare</item>
        <item>Shi Yomi</item><item>Tawang</item><item>Tirap</item><item>Upper Siang</item><item>Upper Subansiri</item><item>West Kameng</item>
        <item>West Siang</item>
    </string-array>
    <string-array name="array_assam_districts">
        <item>Select Your District</item>
        <item>Bajali</item><item>Baksa</item><item>Barpeta</item><item>Biswanath</item><item>Bongaigaon</item><item>Cachar</item>
        <item>Charaideo</item><item>Chirang</item><item>Darrang</item><item>Dhemaji</item><item>Dhubri</item><item>Dibrugarh</item>
        <item>Dima Hasao</item><item>Goalpara</item><item>Golaghat</item><item>Hailakandi</item><item>Hojai</item><item>Jorhat</item>
        <item>Kamrup</item><item>Kamrup Metropolitan</item><item>Karbi Anglong</item><item>Karimganj</item><item>Kokrajhar</item><item>Lakhimpur</item>
        <item>Majuli</item><item>Morigaon</item><item>Nagaon</item><item>Nalbari</item><item>Sivasagar</item><item>Sonitpur</item>
        <item>South Salmara-Mankachar</item><item>Tinsukia</item><item>Udalguri</item><item>West Karbi Anglong</item>
    </string-array>
    <string-array name="array_bihar_districts">
        <item>Select Your District</item>
        <item>Araria</item><item>Arwal</item><item>Aurangabad</item><item>Banka</item><item>Begusarai</item><item>Bhagalpur</item>
        <item>Bhojpur</item><item>Buxar</item><item>Darbhanga</item><item>East Champaran</item><item>Gaya</item><item>Gopalganj</item>
        <item>Jamui</item><item>Jehanabad</item><item>Kaimur</item><item>Katihar</item><item>Khagaria</item><item>Kishanganj</item>
        <item>Lakhisarai</item><item>Madhepura</item><item>Madhubani</item><item>Munger</item><item>Muzaffarpur</item><item>Nalanda</item>
        <item>Nawada</item><item>Patna</item><item>Purnia</item><item>Rohtas</item><item>Saharsa</item><item>Samastipur</item>
        <item>Saran</item><item>Sheikhpura</item><item>Sheohar</item><item>Sitamarhi</item><item>Siwan</item><item>Supaul</item>
        <item>Vaishali</item><item>West Champaran</item>
    </string-array>
    <string-array name="array_chhattisgarh_districts">
        <item>Select Your District</item>
        <item>Balod</item><item>Baloda Bazar</item><item>Balrampur Ramanujganj</item><item>Bastar</item><item>Bemetara</item><item>Bijapur</item>
        <item>Bilaspur</item><item>Dantewada</item><item>Dhamtari</item><item>Durg</item><item>Gariaband</item><item>Gaurela Pendra Marwahi</item>
        <item>Janjgir Champa</item><item>Jashpur</item><item>Kabirdham</item><item>Kanker</item><item>Kondagaon</item><item>Korba</item>
        <item>Koriya</item><item>Mahasamund</item><item>Mungeli</item><item>Narayanpur</item><item>Raigarh</item><item>Raipur</item>
        <item>Rajnandgaon</item><item>Sukma</item><item>Surajpur</item><item>Surguja</item>
    </string-array>
    <string-array name="array_goa_districts">
        <item>Select Your District</item>
        <item>North Goa</item><item>South Goa</item>
    </string-array>
    <string-array name="array_gujarat_districts">
        <item>Select Your District</item>
        <item>Ahmedabad</item><item>Amreli</item><item>Anand</item><item>Aravalli</item><item>Banaskantha</item><item>Bharuch</item>
        <item>Bhavnagar</item><item>Botad</item><item>Chhota Udaipur</item><item>Dahod</item><item>Dang</item><item>Devbhoomi Dwarka</item>
        <item>Gandhinagar</item><item>Gir Somnath</item><item>Jamnagar</item><item>Junagadh</item><item>Kheda</item><item>Kutch</item>
        <item>Mahisagar</item><item>Mehsana</item><item>Morbi</item><item>Narmada</item><item>Navsari</item><item>Panchmahal</item>
        <item>Patan</item><item>Porbandar</item><item>Rajkot</item><item>Sabarkantha</item><item>Surat</item><item>Surendranagar</item>
        <item>Tapi</item><item>Vadodara</item><item>Valsad</item>
    </string-array>
    <string-array name="array_haryana_districts">
        <item>Select Your District</item>
        <item>Ambala</item><item>Bhiwani</item><item>Charkhi Dadri</item><item>Faridabad</item><item>Fatehabad</item><item>Gurugram</item>
        <item>Hisar</item><item>Jhajjar</item><item>Jind</item><item>Kaithal</item><item>Karnal</item><item>Kurukshetra</item>
        <item>Mahendragarh</item><item>Mewat</item><item>Palwal</item><item>Panchkula</item><item>Panipat</item><item>Rewari</item>
        <item>Rohtak</item><item>Sirsa</item><item>Sonipat</item><item>Yamunanagar</item>
    </string-array>
    <string-array name="array_himachal_pradesh_districts">
        <item>Select Your District</item>
        <item>Bilaspur</item><item>Chamba</item><item>Hamirpur</item><item>Kangra</item><item>Kinnaur</item><item>Kullu</item>
        <item>Lahaul Spiti</item><item>Mandi</item><item>Shimla</item><item>Sirmaur</item><item>Solan</item><item>Una</item>
    </string-array>
    <string-array name="array_jammu_kashmir_districts">
        <item>Select Your District</item>
        <item>Anantnag</item><item>Bandipora</item><item>Baramulla</item><item>Budgam</item><item>Doda</item><item>Ganderbal</item>
        <item>Jammu</item><item>Kathua</item><item>Kishtwar</item><item>Kulgam</item><item>Kupwara</item><item>Poonch</item>
        <item>Pulwama</item><item>Rajouri</item><item>Ramban</item><item>Reasi</item><item>Samba</item><item>Shopian</item>
        <item>Srinagar</item><item>Udhampur</item>
    </string-array>
    <string-array name="array_jharkhand_districts">
        <item>Select Your District</item>
        <item>Bokaro</item><item>Chatra</item><item>Deoghar</item><item>Dhanbad</item><item>Dumka</item><item>East Singhbhum</item>
        <item>Garhwa</item><item>Giridih</item><item>Godda</item><item>Gumla</item><item>Hazaribagh</item><item>Jamtara</item>
        <item>Khunti</item><item>Koderma</item><item>Latehar</item><item>Lohardaga</item><item>Pakur</item><item>Palamu</item>
        <item>Ramgarh</item><item>Ranchi</item><item>Sahebganj</item><item>Seraikela Kharsawan</item><item>Simdega</item><item>West Singhbhum</item>
    </string-array>
    <string-array name="array_karnataka_districts">
        <item>Select Your District</item>
        <item>Bagalkot</item><item>Bangalore Rural</item><item>Bangalore Urban</item><item>Belgaum</item><item>Bellary</item><item>Bidar</item>
        <item>Chamarajanagar</item><item>Chikkaballapur</item><item>Chikkamagaluru</item><item>Chitradurga</item><item>Dakshina Kannada</item><item>Davanagere</item>
        <item>Dharwad</item><item>Gadag</item><item>Gulbarga</item><item>Hassan</item><item>Haveri</item><item>Kodagu</item>
        <item>Kolar</item><item>Koppal</item><item>Mandya</item><item>Mysore</item><item>Raichur</item><item>Ramanagara</item>
        <item>Shimoga</item><item>Tumkur</item><item>Udupi</item><item>Uttara Kannada</item><item>Vijayanagara</item><item>Vijayapura</item>
        <item>Yadgir</item>
    </string-array>
    <string-array name="array_kerala_districts">
        <item>Select Your District</item>
        <item>Alappuzha</item><item>Ernakulam</item><item>Idukki</item><item>Kannur</item><item>Kasaragod</item><item>Kollam</item>
        <item>Kottayam</item><item>Kozhikode</item><item>Malappuram</item><item>Palakkad</item><item>Pathanamthitta</item><item>Thiruvananthapuram</item>
        <item>Thrissur</item><item>Wayanad</item>
    </string-array>
    <string-array name="array_madhya_pradesh_districts">
        <item>Select Your District</item>
        <item>Agar Malwa</item><item>Alirajpur</item><item>Anuppur</item><item>Ashoknagar</item><item>Balaghat</item><item>Barwani</item>
        <item>Betul</item><item>Bhind</item><item>Bhopal</item><item>Burhanpur</item><item>Chachaura</item><item>Chhatarpur</item>
        <item>Chhindwara</item><item>Damoh</item><item>Datia</item><item>Dewas</item><item>Dhar</item><item>Dindori</item>
        <item>Guna</item><item>Gwalior</item><item>Harda</item><item>Hoshangabad</item><item>Indore</item><item>Jabalpur</item>
        <item>Jhabua</item><item>Katni</item><item>Khandwa</item><item>Khargone</item><item>Maihar</item><item>Mandla</item>
        <item>Mandsaur</item><item>Morena</item><item>Nagda</item><item>Narsinghpur</item><item>Neemuch</item><item>Niwari</item>
        <item>Panna</item><item>Raisen</item><item>Rajgarh</item><item>Ratlam</item><item>Rewa</item><item>Sagar</item>
        <item>Satna</item><item>Sehore</item><item>Seoni</item><item>Shahdol</item><item>Shajapur</item><item>Sheopur</item>
        <item>Shivpuri</item><item>Sidhi</item><item>Singrauli</item><item>Tikamgarh</item><item>Ujjain</item><item>Umaria</item>
        <item>Vidisha</item>
    </string-array>
</resources>